--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             <!-- 마진패딩적용중 -->
             <ul>
                 <li class="logo"><a href="#"><div>Ariticles</div></a></li>
-                <li><a href="http://127.0.0.1:5500/final_home.html"><div class="listwrap"><span class="material-symbols-outlined">
+                <li><a href="https://girigirigit.github.io/Articles_home/"><div class="listwrap"><span class="material-symbols-outlined">
                     home
                     </span>
                     <div class="home">
