--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         <div class="sidebar">
             <!-- 마진패딩적용중 -->
             <ul>
-                <li class="logo"><a href="#"><div>Ariticles</div></a></li>
+                <li class="logo"><a href="https://girigirigit.github.io/Articles_home/"><div>Ariticles</div></a></li>
                 <li><a href="https://girigirigit.github.io/Articles_home/"><div class="listwrap"><span class="material-symbols-outlined">
                     home
                     </span>
@@ -389,14 +389,14 @@
                     </div>
                     
                 </div></a></li>
-                <li><a href="http://127.0.0.1:5500/final_search.html"><div class="listwrap"><span class="material-symbols-outlined">
+                <li><a href="https://girigirigit.github.io/Articles_search/"><div class="listwrap"><span class="material-symbols-outlined">
                     search
                     </span>
                     <div class="search">
                         검색하기    
                     </div>
                 </div></a></li>
-                <li><a href="http://127.0.0.1:5500/final_library.html"><div class="listwrap"><span class="material-symbols-outlined">
+                <li><a href="https://girigirigit.github.io/Articles_library/"><div class="listwrap"><span class="material-symbols-outlined">
                     library_books
                     </span>
                     <div class="mylibrary">
